--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "multer": "^2.0.0",
-    "socket.io": "^4.7.2"
+    "cors": "^2.8.5",
+    "socket.io": "^4.7.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
