--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "socket.io": "^4.7.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
